3-separate-nginx-pods-and-services.yaml
# separate-pods-services.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod-1
  labels:
    app: pod-1 # Unique label for the first pod
spec:
  containers:
  - name: my-container
    image: nginx:1.14.2
    ports:
    - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: service-pod-1
spec:
  type: NodePort
  selector:
    app: pod-1 # Selects only the first pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: my-pod-2
  labels:
    app: pod-2 # Unique label for the second pod
spec:
  containers:
  - name: my-container
    image: nginx:1.14.2
    ports:
    - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: service-pod-2
spec:
  type: NodePort
  selector:
    app: pod-2 # Selects only the second pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: my-pod-3
  labels:
    app: pod-3 # Unique label for the third pod
spec:
  containers:
  - name: my-container
    image: nginx:1.14.2
    ports:
    - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: service-pod-3
spec:
  type: NodePort
  selector:
    app: pod-3 # Selects only the third pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
