nginx-deployment-and-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx
spec:
  selector:
    app: nginx # Selects pods with the label "app: nginx"
    # type: NodePort # Exposes the service on a static port on each Node's IP
  ports:
    - protocol: TCP
      port: 8080 # The port the service itself exposes within the cluster
      targetPort: 80 # The port on the container to forward traffic to
      # nodePort: 30011 # Optional: specify a static NodePort
      #
