kic-ingress-for-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: nginx
  annotations:
    konghq.com/strip-path: 'true'
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: '/nginx'
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx
            port:
              number: 8080
